--- a/index.html
+++ b/index.html
@@ -1,7 +1,49 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Flemme de changer le titre</title>
+    <style>
+        body {
+            font-family: Comic Sans MS, sans-serif;
+            background-color: #f0f0f0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+        .container {
+            text-align: center;
+            background-color: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+        h1 {
+            color: #333;
+        }
+        .main-button {
+            background-color: red;
+            border: none;
+            color: white;
+            padding: 15px 32px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
+            cursor: pointer;
+        }
+    </style>
+</head>
 <body>
-<h1>salut</h1>
-<p>regarde maman, je suis online</p>
+    <div class="container">
+        <h1>Bienvenue sur mon premier site internet</h1>
+        <p>voilà, j'espère que c'est pas trop moche</p>
+        <p>(Luxflower c'est une référence à lucas florent)</p>
+        <button class="main-button" onclick="alert('Pourquoi tu m\'écoutes pas :\(')">Ne pas cliquer sur ce bouton</button>
+    </div>
 </body>
 </html>
