--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
     <div class="container">
         <h1>Bienvenue sur mon premier site internet</h1>
         <p>voilà, j'espère que c'est pas trop moche</p>
-        <p>(Luxflower c'est une référence à lucas florent)</p>
-        <button class="main-button" onclick="alert('Pourquoi tu m\'écoutes pas :\(')">Ne pas cliquer sur ce bouton</button>
+        <p>pardonnez l'URL un peu étrange, au moins c'est gratos</p>
+        <button class="main-button" onclick="alert('💥💥 BOOM 💥💥')">Bouton d'autodestruction</button>
     </div>
 </body>
 </html>
